# actix-embed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: fallback_handler.rs  lib.rs  service.rs
testdata/: index.html
