[package]
name = "actix-embed"
version = "0.1.0"
edition = "2021"
description = "Provides embedded files to actix."
readme = "README.md"
homepage = "https://github.com/unbyte/actix-embed"
repository = "https://github.com/unbyte/actix-embed"
authors = ["unbyte <i@shangyes.net>"]
keywords = ["rust_embed", "actix"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false }
rust-embed = "6"
mime_guess = "2"
futures-core = "0.3"
hex = "0.4"

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1.0-beta.13"
actix-web = "4"
bytes = "1"